# grainy

./: .eslintrc.json  .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.yaml  MANIFEST.in  README.md  karma.conf.js  mkdocs.yml  package-lock.json  package.json  pyproject.toml  readthedocs.yml  setup.py  tox.ini
.github/workflows/: codeql.yml  js-tests.yml  tests.yml
Ctl/: requirements-docs.txt  requirements-test.txt
docs/: quickstart.md
docs/api/: grainy.const.md  grainy.core.md
facsimile/: requirements-test.txt  requirements.txt
grainy/: const.py  core.py
src/grainy/: __init__.py  const.py  core.py
src/js/: grainy.js
tests/: conftest.py  test_class_namespace.py  test_class_permission.py  test_class_permissionset.py  test_util.py
tests/js/: test.grainy.js
twentyc/perms/: core.py
