[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "grainy"
repository = "https://github.com/20c/grainy"
version = "1.8.1.1"
description = "granular permissions utility"
authors = [ "20C <code@20c.com>",]
license = "Apache-2.0"
classifiers = [ "Development Status :: 5 - Production/Stable", "License :: OSI Approved :: Apache Software License", "Programming Language :: Python :: 3.6", "Programming Language :: Python :: 3.7", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9",]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
codecov = "^2.1.10"
coverage = "^5.3"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
tox = "^3.20.1"
bandit = "^1.6.2"
black = "^20.8b1"
isort = "^5.7.0"
flake8 = "^3.8.4"

[tool.poetry.extras]
docs = [ "markdown-include", "mkdocs", "pymdgen",]

[tool.poetry.dev-dependencies.markdown-include]
version = ">=0.5,<1"
optional = true

[tool.poetry.dev-dependencies.mkdocs]
version = ">=1.0.0,<2.0.0"
optional = true

[tool.poetry.dev-dependencies.pymdgen]
version = "<2"
optional = true
