[tool.poetry]
name = "grainy"
repository = "https://github.com/20c/grainy"
readme = "README.md"
version = "1.8.1.1"
description = "granular permissions utility"
authors = ["20C <code@20c.com>"]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.5"
pytest-cov = ">=2.3.1,<3.0"
tox = ">=3.0,<4.0"
tox-gh-actions = ">=2.9.1"
click = ">=7,<8"

# lint
black = { version = ">=20", allow-prereleases = true }
isort = "^5.7.0"
flake8 = "^3.8.4"
mypy = "^0.950"
pre-commit = "^2.13"
pyupgrade = "^2.19.4"

# ctl
ctl = "^1"
jinja2 = "^3"
tmpl = "^1"
twine = "^3.3.0"

# docs
markdown-include = ">=0.5"
mkdocs = "^1.2.3"
pymdgen = "^1.0.0"

[tool.poetry.extras]
docs = ["markdown-include", "mkdocs", "pymdgen"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
